import org.gradle.api.tasks.testing.logging.TestExceptionFormat
import org.gradle.api.tasks.testing.logging.TestLogEvent

import java.time.ZonedDateTime
import java.time.format.DateTimeFormatter

plugins {
  id 'com.vanniktech.maven.publish' version '0.30.0' apply false
  id 'com.github.ben-manes.versions' version '0.51.0'
  id 'java-library'
  id 'idea'
}

tasks.withType(Wrapper).configureEach {
  distributionType = Wrapper.DistributionType.ALL
}

idea {
  module {
    downloadSources = true
    downloadJavadoc = true
  }
}

subprojects {
  tasks.withType(Jar).configureEach {
    def dateFile = layout.buildDirectory.file('jar-manifest-date.txt').get().asFile
    if (!dateFile.exists()) {
      def date = DateTimeFormatter.ofPattern('EEE MMM dd HH:mm:ss zzz yyyy').
        format(ZonedDateTime.now())
      dateFile.parentFile.mkdirs()
      dateFile.text = date.trim()
    }

    manifest {
      attributes(
        'Created-By': POM_DEVELOPER_NAME,
        'Implementation-Title': POM_NAME,
        'Implementation-Version': VERSION_NAME,
        'Implementation-Vendor': POM_DEVELOPER_NAME,
        'Built-By': System.getProperty('user.name'),
        'Built-Date': dateFile.text.trim(),
        'Built-JDK': System.getProperty('java.version'),
        'Built-Gradle': gradle.gradleVersion)
    }
  }

  tasks.withType(JavaCompile).configureEach {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8

    configure(options) {
      compilerArgs << '-Xlint:all'
      compilerArgs << '-Xlint:-options'
      encoding = 'utf-8'
    }
  }

  tasks.withType(Test).configureEach {
    testLogging {
      exceptionFormat = TestExceptionFormat.FULL
      showCauses = true
      showExceptions = true
      showStackTraces = true

      // Check if running on CI and set events accordingly
      events = System.getenv("CI") != null ?
        TestLogEvent.values() as Set :
        [TestLogEvent.FAILED, TestLogEvent.SKIPPED]
    }

    // For mockito to work with JDK 21
    jvmArgs "-Dnet.bytebuddy.experimental=true"

    def maxWorkerCount = gradle.startParameter.maxWorkerCount
    maxParallelForks = (maxWorkerCount < 2) ? 1 : maxWorkerCount / 2
  }
}
